--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<org.thymeleaf-version>2.1.4.RELEASE</org.thymeleaf-version>
 		<org.aspectj-version>1.8.1</org.aspectj-version>
 		<org.slf4j-version>1.6.1</org.slf4j-version>
+		<ehcache.version>2.9.0</ehcache.version>
 	</properties>
 
 	<dependencies>
@@ -37,7 +38,7 @@
 				<exclusion>
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
-				 </exclusion>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -80,7 +81,7 @@
 			<artifactId>spring-aop</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		
+
 		<!-- 2.加入hibernate 相关配置包 -->
 		<!-- 依赖的持久化类库 -->
 		<dependency>
@@ -104,13 +105,19 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>${org.hibernate.validator-version}</version>
 		</dependency>
-		
+
 		<!-- ehcache -->
 		<dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-ehcache</artifactId>
-    		<version>${org.hibernate-version}</version>
-    	</dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>${org.hibernate-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>${ehcache.version}</version>
+		</dependency>
 
 		<!-- mysql connectorJ -->
 		<dependency>
@@ -164,11 +171,11 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>org.aspectj</groupId> 
-		  <artifactId>aspectjweaver</artifactId> 
-		  <version>${org.aspectj-version}</version>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${org.aspectj-version}</version>
 		</dependency>
 
 		<!-- @Inject -->
@@ -239,12 +246,17 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2.2</version>
+			<version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.0.1</version>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
 		</dependency>
 
 		<!-- Security (used for CSRF protection only) -->
