--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -5,10 +5,19 @@ jdbc.user=root
 jdbc.pass=1qaz2wsx
 
 # hibernate.X
-hibernate.connection.driverClass=org.gjt.mm.mysql.Driver
-hibernate.connection.url=jdbc:mysql:// localhost:3306/springmvc
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.connection.username=root
-hibernate.connection.password=1qaz2wsx
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
+hibernate.format_sql=true
+hibernate.jdbc.fetch_size=50
+hibernate.jdbc.batch_size=50
+hibernate.connection.autocommit=true
+hibernate.connection.release_mode=auto
+javax.persistence.validation.mode=none
+hibernate.bytecode.use_reflection_optimizer=true
+hibernate.generate_statistics=true
+hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.use_structured_entries=true
