--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,28 @@
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
 
+	<!-- 配置加载log4j.xml文件路径 -->
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.xml</param-value>
+	</context-param>
+
+	<!-- 配置log4j.xml变量 -->
+	<context-param>
+		<param-name>rootLevel</param-name>
+		<param-value>DEBUG</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>loggingLevel</param-name>
+		<param-value>INFO</param-value>
+	</context-param>
+
+	<!-- 配置log4j.xml监听器 -->
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>
+
 	<!-- spring字符过滤器 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
